...
                checked = debug,
                onCheckedChange = {
                    debug = it
                    SettingsManager.setDebug(context, it)
                }
            )
            Text(text = "Debug Mode", modifier = Modifier.padding(start = 8.dp))
        }

        Row(verticalAlignment = Alignment.CenterVertically) {
            Switch(
                checked = benchmark,
                onCheckedChange = {
...
